--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
-    href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,700;1,700&family=Roboto:ital,wght@400;500;700&display=swap"
-    rel="stylesheet">
+        href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,700;1,700&family=Roboto:wght@400;500;700&display=swap"
+        rel="stylesheet"> 
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
@@ -111,7 +111,8 @@
             </ul>
         
     </div>
-    </header>
+</div>
+</header>
 
     <main>
 <!-- region banner -->
@@ -181,7 +182,7 @@
             <ul class="team-list">
                 <li class="team-list-item"> 
                     <img
-                    srcset="../images/product-designer.jpg 1x, ../images/product-designer@2x.jpg 2x" 
+                    srcset="./images/product-designer.jpg 1x, ./images/product-designer@2x.jpg 2x" 
                     src="./images/product-designer.jpg" 
                     alt="Mark Guerrero. Product Designer" width="264" height="260"/>
                     <div class="team-list-item-container">
@@ -220,7 +221,7 @@
 
                 <li class="team-list-item"> 
                     <img 
-                    srcset="../images/frontend-developer.jpg 1x, ../images/frontend-developer@2x.jpg 2x"
+                    srcset="./images/frontend-developer.jpg 1x, ./images/frontend-developer@2x.jpg 2x"
                     src="./images/frontend-developer.jpg" 
                     alt="Tom Ford. Frontend Developer" width="264" height="260"/>
                     <div class="team-list-item-container">
@@ -261,7 +262,7 @@
 
                 <li class="team-list-item"> 
                     <img 
-                    srcset="../images/marketing.jpg 1x, ../images/marketing@2x.jpg 2x"
+                    srcset="./images/marketing.jpg 1x, ./images/marketing@2x.jpg 2x"
                     src="./images/marketing.jpg" 
                     alt="Camila Garcia. Marketing" width="264" height="260"/>
                     <div class="team-list-item-container">
@@ -302,7 +303,7 @@
 
                 <li class="team-list-item"> 
                     <img 
-                    srcset="../images/ui-designer.jpg 1x, ../images/ui-designer@2x.jpg 2x"
+                    srcset="./images/ui-designer.jpg 1x, ./images/ui-designer@2x.jpg 2x"
                     src="./images/ui-designer.jpg" 
                     alt="Daniel Wilson. UI Designer" width="264" height="260"/>
                     <div class="team-list-item-container">
